syntax = "proto2";

package MessageProto;

option java_package = "cool.qun.estate.backend.protocol.message";

import "Resource.proto";

message MessagePb {
  required string id = 1;
  required string title = 2;
  required string summary = 3;
  required string category = 4;
  optional string link = 5;
  optional bool unread = 6;
}

message MessageDetailPb {
  required string id = 1;
  required string title = 2;
  required string content = 3;
}

message MessageRequest {
  option (method) = 'GET';
  option (path) = '/api/messages?page={pageable.page}&size={pageable.size}';
  required ResourceProto.PageablePb pageable = 1;
}

message MessageDetailRequest {
  option (method) = 'GET';
  option (path) = '/api/messages/?id={id}';
  required string id = 1;
}

message MessageResponse {
  repeated MessagePb data = 1;
  required ResourceProto.PagingPb paging = 2;
}
message MessageDetailResponse {
  required MessageDetailPb data = 1;
}
